English Reference Letters ChangeLog

***** ChangeLog for 2.0 compared to 1.9 *****
-FIX : Specify the condition that allows the use of agefodd substitution keys only in the case of an agefodd pdf
-New : Add mass generation for invoice model letters

***** ChangeLog for 1.9 compared to 1.8 *****
-New : Only for 4.0

***** ChangeLog for 1.8 compared to 1.7 *****
-FIX : Add customer order letters

***** ChangeLog for 1.7 compared to 1.5 *****
-FIX : PHP warining for PHP 7 and dolibarr 4.0

***** ChangeLog for 1.5 compared to 1.3 *****
-NEW : Admin option to create calendar event on each letter creation
-NEW : Admin option to copy generated letters as attachement of event
-NEW : Admin option to select label type of event 
-NEW : Admin option to output in PDF ref end title of letters
-NEW : Add option to output in PDF ref end title of letters on letter création
-NEW : Add background PDF in models 
-NEW : Add read only chapter option (cannot be seen/modified during letter creation)
-NEW : Add new tags : title, ref, model title of current letter
-NEW : Letters list with filter


***** ChangeLog for 1.3 compared to 1.2 *****
-NEW : Review french/english/spanish translation
-NEW : Add french/english/spanish documentation

***** ChangeLog for 1.2 compared to 1.1 *****
-NEW : Add break page option without repeat head
-FIX : tag type {cust_...} on contact letter works 

***** ChangeLog for 1.0 compared to 1.1 *****
-FIX : Cannot create models without title 

***** ChangeLog for 0.9 compared to 1.0 *****
-NEW : Add break page option
-FIX : Contact models output a contact adress