@@ -1,6 +1,7 @@
 English Reference Letters ChangeLog
 
 ***** ChangeLog for 2.0 compared to 1.9 *****
+-FIX : Preselect model on documents if default - *09/02/2022* - 2.6.6
 -FIX : Specify the condition that allows the use of agefodd substitution keys only in the case of an agefodd pdf
 -New : Add mass generation for invoice model letters
 
